first iteration of pokemon grid display

--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -1,9 +1,8 @@
 <section>
-
-  <!--app-navbar></app-navbar-->
-  app not implemented yet
-  <!--div class="content">
+  <div class="imgBxCenter"><img src="assets/images/logoPokeballWhite.png"></div>
+  <app-navbar></app-navbar>
+  <div class="content">
     <router-outlet></router-outlet>
-  </div-->
+  </div>
 
 </section>
