--- a/pokedex/src/app/app.component.scss
+++ b/pokedex/src/app/app.component.scss
@@ -13,20 +13,16 @@ section
   width: 100%;
 }
 
-.imgBxCenter
-{
-
-}
 .imgBxCenter img
 {
-
-    display: block;
-    position: fixed;
+  display: block;
+  position: fixed;
    top: 50%;
    left: 50%;
    width: 50%;
    margin-top: -25%; /* Half the height */
    margin-left: -25%; /* Half the width */
+   z-index: -20;
 }
 
 @media (max-width: 911px)
