--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -1,16 +1,22 @@
 header
 {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  top: 1%;
+  left: 5%;
+  width: 90%;
   min-height : 66px;
-  background: #43a5f6;
   padding: 0 100px;
   display: flex;
   justify-content : space-between;
   align-items: center;
   z-index: 20;
+  //Glassmorphism
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  background: rgba(83, 83, 83, 0.2);
+  border-top: 1px solid rgba(83, 83, 83, 0.5);
+  border-left: 1px solid rgba(83, 83, 83, 0.5);
+  backdrop-filter: blur(5px);
 }
 
 header .logo
@@ -36,7 +42,7 @@ header ul li
 }
 header ul li a
 {
-  color : #fff;
+  color : #F5F5F5;
   font-size : 1.1em;
   padding: 20px 25px;
   text-decoration: none;
@@ -49,8 +55,15 @@ header ul li ul
   position: absolute;
   left: 0;
   width: 200px ;
-  background: #445964;
   display: none;
+  z-index: 21;
+  //Glassmorphism
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  background: rgba(83, 83, 83, 0.8);
+  border-top: 1px solid rgba(83, 83, 83, 0.5);
+  border-left: 1px solid rgba(83, 83, 83, 0.5);
+  backdrop-filter: blur(10px);
 }
 
 header ul li:hover ul
@@ -67,7 +80,7 @@ header ul li ul li
 
 
 /*RESPONSIVE*/
-@media (max-width: 900px)
+@media (max-width: 1000px)
 {
   header
   {
@@ -80,8 +93,14 @@ header ul li ul li
     width: 100%;
     top: 66px;
     left :0;
-    background: #445964;
     display: none;
+    //Glassmorphism
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    background: rgba(83, 83, 83, 0.8);
+    border-top: 1px solid rgba(83, 83, 83, 0.5);
+    border-left: 1px solid rgba(83, 83, 83, 0.5);
+    backdrop-filter: blur(10px);
   }
 
   header nav
@@ -90,8 +109,14 @@ header ul li ul li
     width: 100%;
     top: 66px;
     left :0;
-    background: #445964;
     display: none;
+    //Glassmorphism
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    background: rgba(83, 83, 83, 0.8);
+    border-top: 1px solid rgba(83, 83, 83, 0.5);
+    border-left: 1px solid rgba(83, 83, 83, 0.5);
+    backdrop-filter: blur(10px);
   }
   header.navigation.active nav
   {
@@ -134,7 +159,3 @@ header ul li ul li
     background-repeat: no-repeat;
   }
 }
-
-    //background: url(../../assets/images/menu.png);
-
-    //background: url(../../assets/images/close.png);
