--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -29,6 +29,6 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin-right: 0;
+  margin-left: 0;
 }
