--- a/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
@@ -3,7 +3,7 @@
   position: relative;
   width: 210px;
   height: 300px;
-  margin: 50px;
+  margin: 10px;
   box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
   border-radius: 15px;
   background: rgba(245, 245, 245, 0.2);
@@ -57,21 +57,22 @@
 }
 
 
-
+//RESPONSIVE
+/*
 @media (max-width: 1000px)
 {
   .card
   {
-    width: 105px;
-    height: 150px;
-    margin: 10px;
+    width: 184px;
+    height: 260px;
+    margin: 6px;
   }
 
   .card .content h2
   {
     top: 0px;
-    right: 15px;
-    font-size: 3em;
+    right: 26px;
+    font-size: 5.4em;
   }
 
   .card .content .contentBx h3
@@ -81,26 +82,26 @@
 
   .card .content .imgBx
   {
-    width: 75px;
-    height: 75px;
+    width: 120px;
+    height: 120px;
   }
+ }
+*/
 
-
-
-  @media (max-width: 500px)
+  @media (max-width: 1000px)
   {
     .card
     {
-      width: 70px;
-      height: 100px;
-      margin: 5px;
+      width: 91px;
+      height: 130px;
+      margin: 3px;
     }
 
     .card .content h2
     {
       top: 0px;
-      right: 10px;
-      font-size: 2em;
+      right: 13px;
+      font-size: 2.7em;
     }
 
     .card .content .contentBx h3
@@ -110,10 +111,9 @@
 
     .card .content .imgBx
     {
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
     }
 
   }
 
-}
