--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -17,6 +17,10 @@ header
   border-top: 1px solid rgba(83, 83, 83, 0.5);
   border-left: 1px solid rgba(83, 83, 83, 0.5);
   backdrop-filter: blur(5px);
+
+  /*
+    position: fixed;
+    */
 }
 
 header .logo
