--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -1,8 +1,24 @@
 .search
 {
+  /*position: fixed;*/
+
   display: flex;
   flex-direction: column;
   padding: 20px;
+
+  /*
+  position: fixed;
+  width: 90%;
+  z-index: 2;
+  box-shadow: 20px 20px 50px #0000001a;
+  border-radius: 15px;
+  background: rgba(83,83,83,.2);
+  border-top: 1px solid rgba(83,83,83,.5);
+  border-left: 1px px solid rgba(83,83,83,.5);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  padding: 10px 20px;
+  left: 5%;*/
 }
 
 .search h1
@@ -19,6 +35,11 @@
 
 .search .bar{
   margin: 0.5%;
+  /*
+    max-width: 501px;
+    height: 25px;
+    border-radius: 5px;
+    */
 }
 
 .pokemonGridItems
