--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -17,10 +17,7 @@ header
   border-top: 1px solid rgba(83, 83, 83, 0.5);
   border-left: 1px solid rgba(83, 83, 83, 0.5);
   backdrop-filter: blur(5px);
-
-  /*
-    position: fixed;
-    */
+  position: fixed;
 }
 
 header .logo
@@ -89,6 +86,12 @@ header ul li ul li
   header
   {
     padding: 10px 20px;
+
+    //TODO PHONE ONLY
+    box-shadow: none;
+    background: rgba(83, 83, 83, 1);
+    border-top: 1px solid rgba(83, 83, 83, 1);
+    border-left: 1px solid rgba(83, 83, 83, 1);
   }
 
   header nav
@@ -105,6 +108,13 @@ header ul li ul li
     border-top: 1px solid rgba(83, 83, 83, 0.5);
     border-left: 1px solid rgba(83, 83, 83, 0.5);
     backdrop-filter: blur(10px);
+
+
+    //TODO PHONE ONLY
+    box-shadow: none;
+    background: rgba(83, 83, 83, 1);
+    border-top: 1px solid rgba(83, 83, 83, 1);
+    border-left: 1px solid rgba(83, 83, 83, 1);
   }
 
   header nav
@@ -121,6 +131,13 @@ header ul li ul li
     border-top: 1px solid rgba(83, 83, 83, 0.5);
     border-left: 1px solid rgba(83, 83, 83, 0.5);
     backdrop-filter: blur(10px);
+
+
+    //TODO PHONE ONLY
+    box-shadow: none;
+    background: rgba(83, 83, 83, 1);
+    border-top: 1px solid rgba(83, 83, 83, 1);
+    border-left: 1px solid rgba(83, 83, 83, 1);
   }
   header.navigation.active nav
   {
