--- a/pokedex/src/styles.scss
+++ b/pokedex/src/styles.scss
@@ -9,4 +9,8 @@
 
 body{
   background-color: #1F1F1F;
+  overflow: hidden;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
