--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -50,6 +50,38 @@
   flex-wrap: wrap;
   margin-right: 0;
   margin-left: 0;
+
+
+  //remove scrollbar
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+
+    overflow: auto;
+
+  max-height: 54em;
+}
+
+//remove scrollbar
+.pokemonGridItems::-webkit-scrollbar {
+    display: none;
+}
+
+.cdk-virtual-scroll-viewport{
+  contain: unset !important;
+}
+::ng-deep .cdk-virtual-scroll-content-wrapper
+{
+  contain: unset !important;
+  padding-top: 9em;
+  position :relative;
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 /*RESPONSIVE*/
