--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -1,3 +1,8 @@
+$black: #1F1F1F;
+$darkGray: #535353;
+$lightGray: #CACACA;
+$white: #F5F5F5;
+
 header
 {
   position: absolute;
@@ -43,7 +48,7 @@ header ul li
 }
 header ul li a
 {
-  color : #F5F5F5;
+  color : $white;
   font-size : 1.1em;
   padding: 20px 25px;
   text-decoration: none;
@@ -89,9 +94,9 @@ header ul li ul li
 
     //TODO PHONE ONLY
     box-shadow: none;
-    background: rgba(83, 83, 83, 1);
-    border-top: 1px solid rgba(83, 83, 83, 1);
-    border-left: 1px solid rgba(83, 83, 83, 1);
+    background: $darkGray;
+    border-top: 1px solid $lightGray;
+    border-left: 1px solid $lightGray;
   }
 
   header nav
@@ -101,20 +106,12 @@ header ul li ul li
     top: 66px;
     left :0;
     display: none;
-    //Glassmorphism
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
-    border-radius: 15px;
-    background: rgba(83, 83, 83, 0.8);
-    border-top: 1px solid rgba(83, 83, 83, 0.5);
-    border-left: 1px solid rgba(83, 83, 83, 0.5);
-    backdrop-filter: blur(10px);
-
 
     //TODO PHONE ONLY
     box-shadow: none;
-    background: rgba(83, 83, 83, 1);
-    border-top: 1px solid rgba(83, 83, 83, 1);
-    border-left: 1px solid rgba(83, 83, 83, 1);
+    background: $darkGray;
+    border-top: 1px solid $lightGray;
+    border-left: 1px solid $lightGray;
   }
 
   header nav
@@ -124,20 +121,12 @@ header ul li ul li
     top: 66px;
     left :0;
     display: none;
-    //Glassmorphism
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
-    border-radius: 15px;
-    background: rgba(83, 83, 83, 0.8);
-    border-top: 1px solid rgba(83, 83, 83, 0.5);
-    border-left: 1px solid rgba(83, 83, 83, 0.5);
-    backdrop-filter: blur(10px);
-
 
     //TODO PHONE ONLY
     box-shadow: none;
-    background: rgba(83, 83, 83, 1);
-    border-top: 1px solid rgba(83, 83, 83, 1);
-    border-left: 1px solid rgba(83, 83, 83, 1);
+    background: $darkGray;
+    border-top: none;
+    border-left: none;
   }
   header.navigation.active nav
   {
