--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -3,12 +3,18 @@ $darkGray: #535353;
 $lightGray: #CACACA;
 $white: #F5F5F5;
 
+.content{
+  margin-top: 10em;
+}
+
 .search
 {
   position: fixed;
+  left: 5%;
+  top: 7em;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 10px 20px;
   position: fixed;
   width: 90%;
   z-index: 2;
@@ -19,14 +25,15 @@ $white: #F5F5F5;
   border-left: 1px px solid rgba(83,83,83,.5);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  padding: 10px 20px;
-  left: 5%;
 }
 
 .search h1
 {
   color: $white;
   margin: 0.5%;
+  font-size : 1.7em;
+  font-weight: 400;
+  line-height: 32px;
 }
 
 .search p
@@ -46,7 +53,7 @@ $white: #F5F5F5;
 
 .pokemonGridItems
 {
-  padding-top: 10em;
+  padding-top: 1em;
   position :relative;
   z-index: 0;
   display: flex;
@@ -56,7 +63,8 @@ $white: #F5F5F5;
   margin-right: 0;
   margin-left: 0;
 
-  max-height: 63em;
+  max-height: 100vh;
+  overflow: auto;
 
 
   //remove scrollbar
@@ -68,18 +76,12 @@ $white: #F5F5F5;
 
 //remove scrollbar
 .pokemonGridItems::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 /*RESPONSIVE*/
 @media (max-width: 1000px)
 {
-  .pokemonGridItems
-  {
-    padding-top: 11em;
-    //TODO PHONE ONLY
-    max-height: 40em;
-  }
 
   .search
   {
