--- a/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
@@ -1,4 +1,5 @@
 $black: #1F1F1F;
+$midBlack: #353535;
 $darkGray: #535353;
 $lightGray: #CACACA;
 $white: #F5F5F5;
@@ -122,9 +123,9 @@ $white: #F5F5F5;
 
       //TODO PHONE ONLY
       box-shadow: none;
-      background: $darkGray;
-      border-top: 1px solid $lightGray;
-      border-left: 1px solid $lightGray;
+      background: $midBlack;
+    border-top: 1px solid $darkGray;
+    border-left: 1px solid $darkGray;
     }
 
     .card .content h2
@@ -139,7 +140,8 @@ $white: #F5F5F5;
 
     .card .content .contentBx h3
     {
-      font-size: 0.5em;
+      font-size: 0.7em;
+      font-weight: 900;
     }
 
     .card .content .imgBx
