--- a/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
+++ b/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="card">
   <div class="pokemonListItem" (click)="display()">
     <div class="imgBxLogo"><img src="assets/images/logoPokeball.png"></div>
     <div class="imgBx"><img [src]="getFrontDefault()" alt="{{pokemon.name}}"></div>
