--- a/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.scss
@@ -1,8 +1,26 @@
-.container
+$black: #1F1F1F;
+$midBlack: #353535;
+$darkGray: #535353;
+$lightGray: #CACACA;
+$white: #F5F5F5;
+
+.card
 {
-  border: solid #dee2e6;
-  border-width: 0 0 1px 0;
+  position: relative;
+  margin: 10px;
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  background: rgba(245, 245, 245, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid rgba(245, 245, 245, 0.5);
+  border-left: 1px solid rgba(245, 245, 245, 0.5);
+  backdrop-filter: blur(5px);
+
+  overflow: hidden;
 }
+
 .pokemonListItem
 {
   display: flex;
@@ -27,8 +45,17 @@
   margin: 0 0 1rem;
 }
 
-@media (max-width: 911px)
+@media (max-width: 1000px)
 {
+  .card
+  {
+
+    //TODO PHONE ONLY
+    box-shadow: none;
+    background: $midBlack;
+    border-top: 1px solid $darkGray;
+    border-left: 1px solid $darkGray;
+  }
   .pokemonListItem
   {
     padding: 0.5rem;
