improved list ui

--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -4,9 +4,9 @@ $darkGray: #535353;
 $lightGray: #CACACA;
 $white: #F5F5F5;
 
-/*.content{
-  margin-top: 10em;
-}*/
+.content{
+   margin: auto;
+}
 
 .search
 {
