--- a/pokedex/src/app/navbar/navbar.component.html
+++ b/pokedex/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <ul>
       <li><a href="home">Home</a></li>
       <li><a href="pokedex">Pokedex</a></li>
-      <li><a href="update">Update</a></li>
+      <li><a href="item">Items</a></li>
       <li><a>Dropdown <b>▼</b></a>
         <ul>
           <li><a href="#">Dopdown1</a></li>
