item list and reworked css

--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -125,6 +125,7 @@ $white: #F5F5F5;
   flex-wrap: wrap;
   margin-right: 0;
   margin-left: 0;
+  padding: 0.1rem;
 
   max-height: 100vh;
   padding-top: 24em;
