--- a/pokedex/src/app/item/item-grid-item/item-grid-item.component.html
+++ b/pokedex/src/app/item/item-grid-item/item-grid-item.component.html
@@ -1,1 +1,10 @@
-<p>{{item.name}}</p>
+<div class="card">
+  <div class="content" (click)="display()">
+    <div class="imgBxLogo"><img src="assets/images/logoPokeball.png" ></div>
+    <h2>{{item.name}}</h2>
+    <div class="imgBx"><img [src]="getImage()" alt="{{item.name}}"></div>
+    <div class="contentBx">
+      <h3>{{item.name}}</h3>
+    </div>
+  </div>
+</div>
