--- a/pokedex/src/app/item/item.component.scss
+++ b/pokedex/src/app/item/item.component.scss
@@ -115,7 +115,7 @@ $white: #F5F5F5;
 
 
 
-.itemGridItems
+.listGridItems
 {
   position :relative;
   z-index: 0;
@@ -135,8 +135,29 @@ $white: #F5F5F5;
   scrollbar-width: none;  /* Firefox */
 }
 
+.listGridItems
+{
+  position :relative;
+  z-index: 0;
+    //background: #fff;
+  padding: 0.1rem;
+
+  max-height: 100vh;
+  padding-top: 24em;
+  overflow: auto;
+
+  //remove scrollbar
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  overflow: auto;
+  //no horizontal scroll
+  overflow-x: hidden;
+}
+
+
 //remove scrollbar
-.itemGridItems::-webkit-scrollbar {
+.listGridItems::-webkit-scrollbar {
   display: none;
 }
 
@@ -154,7 +175,7 @@ $white: #F5F5F5;
     border-left: 1px solid $darkGray;
   }
 
-  .itemGridItems
+  .listGridItems
   {
     padding-top: 20em;
     padding-bottom: 6em;
