--- a/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.scss
@@ -7,8 +7,8 @@ $white: #F5F5F5;
 .card
 {
   position: relative;
-  width: 210px;
-  height: 300px;
+  width: 13rem;
+  height: 18rem;
   margin: 10px;
   box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
   border-radius: 15px;
@@ -73,8 +73,9 @@ $white: #F5F5F5;
 }
 
 .card:hover {
-  width: 252px;
-  height: 360px;
+  width: 15rem;
+  height: 20rem;
+  background: rgba(245, 245, 245, 0.5);
   transition: all 0.2s ease-out;
 }
 
@@ -123,20 +124,20 @@ $white: #F5F5F5;
   {
     .card
     {
-      width: 91px;
-      height: 130px;
+      width: 7rem;
+      height: 9rem;
       margin: 3px;
 
       //TODO PHONE ONLY
       box-shadow: none;
       background: $midBlack;
-    border-top: 1px solid $darkGray;
-    border-left: 1px solid $darkGray;
+      border-top: 1px solid $darkGray;
+      border-left: 1px solid $darkGray;
     }
 
     .card:hover {
-      width: 109px;
-      height: 156px;
+      width: 8rem;
+      height: 10rem;
     }
 
     .card .content h2
