basic detail window display on pokemon selection

--- a/pokedex/src/app/pokedex/pokedex.component.html
+++ b/pokedex/src/app/pokedex/pokedex.component.html
@@ -33,7 +33,8 @@
     </div>
   </div>
 
-  <div *ngIf="isLoading">Loading...</div>
+  <app-pokemon-detail *ngIf="displayDetail" app-pokemon-detail></app-pokemon-detail>
+  <!--div *ngIf="isLoading">Loading...</div-->
 
 
 
