--- a/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.html
+++ b/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="content" (click)="display()">
+  <div class="content" (click)="displayDetailWindow()">
     <div class="imgBxLogo"><img src="assets/images/logoPokeball.png" ></div>
     <h2>{{getPokemonId()}}</h2>
     <div class="imgBx"><img [src]="getFrontDefault()" alt="{{pokemon.name}}"></div>
