--- a/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
+++ b/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="pokemonListItem" (click)="display()">
+  <div class="pokemonListItem" (click)="displayDetailWindow()">
     <div class="imgBxLogo"><img src="assets/images/logoPokeball.png"></div>
     <div class="pokemonListDetail">
       <p>#{{getPokemonId()}}</p>
