--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -3,6 +3,7 @@
   <div class="backgroundColor" [ngClass]="pokemon.types[0].type.name"></div>
 </div>
 <div class="content" *ngIf="pokemon.name">
+  <span class="close" (click)="hideDetailWindow()">&times;</span>
   <div class="imgBx"><img [src]="pokemon.sprites.front_default" alt="{{pokemon.name}}"></div>
   <div class="infos">
     <div class="title">
