--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -12,5 +12,43 @@
       </div>
       <h1>#{{pokemon.id}}</h1>
     </div>
+    <div class="tabBox">
+      <button class="tabBtn" [ngClass]="tabActive[0]" (click)="setActiveTab(0)">Tab 1</button>
+      <button class="tabBtn" [ngClass]="tabActive[1]" (click)="setActiveTab(1)">Tab 2</button>
+      <button class="tabBtn" [ngClass]="tabActive[2]" (click)="setActiveTab(2)">Tab 3</button>
+      <button class="tabBtn" [ngClass]="tabActive[3]" (click)="setActiveTab(3)">Tab 4</button>
+      <div class="line"></div>
+    </div>
+    <div class="infoContentBox">
+
+      <div class="infoContent" [ngClass]="tabActive[0]">
+        <h2>Title 1</h2>
+        <p>
+          Somes informations about pokemon
+        </p>
+      </div>
+
+      <div class="infoContent" [ngClass]="tabActive[1]">
+        <h2>Title 2</h2>
+        <p>
+          Somes informations about pokemon
+        </p>
+      </div>
+
+      <div class="infoContent" [ngClass]="tabActive[2]">
+        <h2>Title 3</h2>
+        <p>
+          Somes informations about pokemon
+        </p>
+      </div>
+
+      <div class="infoContent" [ngClass]="tabActive[3]">
+        <h2>Title 4</h2>
+        <p>
+          Somes informations about pokemon
+        </p>
+      </div>
+
+    </div>
   </div>
 </div>
