--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -184,7 +184,7 @@ $water    : #4BC9FF;
 }
 .tabBox .tabBtn
 {
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 600;
   color: $midBlack;
   background: none;
@@ -193,14 +193,14 @@ $water    : #4BC9FF;
   cursor: pointer;
 }
 .tabBox .tabBtn.active{
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 650;
   color: $black;
 }
 .line{
   position: absolute;
   top: 58px;
-  left: 17px;
+  left: 1%;
   width: 90px;
   height: 5px;
   background-color: $black;
@@ -227,4 +227,33 @@ $water    : #4BC9FF;
 .infoContentBox .infoContent h2
 {
   margin-bottom: 10px;
+}
+
+.flavorTxt
+{
+  color: $black;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  text-align: justify;
+}
+
+
+
+@media (max-width: 1000px)
+{
+  .content .infos .title .nameBox h1
+  {
+    font-size: 1.1rem;
+    font-weight: 600;
+  }
+  .tabBox .tabBtn
+  {
+    font-size: .9rem;
+    font-weight: 550;
+  }
+  .tabBox .tabBtn.active{
+    font-size: 1rem;
+    font-weight: 600;
+  }
 }
