--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -12,6 +12,11 @@
       </div>
       <h1>#{{pokemon.id}}</h1>
     </div>
+    <div class="typeBox">
+      <div class="type backgroundColor" [ngClass]="type.type.name"  *ngFor="let type of pokemon.types">
+        <h1>{{type.type.name}}</h1>
+      </div>
+    </div>
     <div class="tabBox">
       <button class="tabBtn" [ngClass]="tabActive[0]" (click)="setActiveTab(0)">About</button>
       <button class="tabBtn" [ngClass]="tabActive[1]" (click)="setActiveTab(1)">Stats</button>
@@ -22,8 +27,19 @@
     <div class="infoContentBox">
 
       <div class="infoContent" [ngClass]="tabActive[0]">
+        <h2>Description</h2>
         <div class="flavorTxt">
           <p>{{getPokemonFlavorText()}}</p>
+        </div>
+        <div class="sizeBox">
+          <div class="heightBox">
+            <h2>Height</h2>
+            <p>{{pokemon.height}}</p>
+          </div>
+          <div class="weightBox">
+            <h2>Weight</h2>
+            <p>{{pokemon.weight}}</p>
+          </div>
         </div>
       </div>
 
