correction poid et taille pokemon detail

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -34,11 +34,11 @@
         <div class="sizeBox">
           <div class="heightBox">
             <h2>Height</h2>
-            <p>{{pokemon.height}}</p>
+            <p>{{getPokemonHeight()}} m</p>
           </div>
           <div class="weightBox">
             <h2>Weight</h2>
-            <p>{{pokemon.weight}}</p>
+            <p>{{getPokemonWeight()}} kg</p>
           </div>
         </div>
       </div>
