--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -279,6 +279,64 @@ $water    : #4BC9FF;
   text-align: center;
 }
 
+.stats{
+  margin: 5%;
+}
+
+.stats h2
+{
+  font-size: 1.2em;
+  color: #000;
+  text-align: center;
+}
+
+.stats .stats-container .stats-wrapper
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.stats .stats-container .stats-wrapper h3
+{
+  font-size: 0.8em;
+  font-weight: normal;
+  width: 40px;
+}
+
+.progressBar{
+  display: block;
+  width: 100%;
+  height: 15px;
+}
+
+.progressBar .percent{
+  position: relative;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #DDDDDD;
+  overflow: hidden;
+}
+
+.progressBar .percent .progress{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border-radius: 5px;
+  background-image: linear-gradient(to right, rgba(255,255,255,0.1), rgba(0,0,0,0.1)) !important;
+  animation: animate 0.5s ease-in-out forwards;
+}
+@keyFrames animate
+{
+  from
+  {
+    width: 0;
+  }
+}
+
 @media (max-width: 1000px)
 {
   .content .infos .title .nameBox h1
